--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,14 +43,8 @@
             {% endwith %}
         </div>
     </div>
-    <footer class="container">
-        Socks Chat &copy; 2019 - <text id="year"></text>
-    </footer>
-</body>
 
-<script type="text/javascript" charset="utf-8">
-    document.onload = document.getElementById('year').innerText = new Date()
-        .getFullYear();
-</script>
+    {% include 'footer.html' %}
+</body>
 
 </html>
